# simple

./: README.md
simple/: CMakeLists.txt
simple/headers/: simple.hpp  simple_UID.hpp  simple_algorithm.hpp  simple_allocator.hpp  simple_array.hpp  simple_backend.hpp  simple_dynamic_array.hpp  simple_field.hpp  simple_logging.hpp  simple_macros.hpp  simple_map.hpp  simple_math.hpp  simple_pair.hpp  simple_set.hpp  simple_string.hpp  simple_tuple.hpp  simple_vulkan.hpp  simple_window.hpp
simple/src/: simple.cpp  simple_window.cpp
test/: CMakeLists.txt
test/src/: main.cpp
